--- a/7-trumps/_trumps.site-header.scss
+++ b/7-trumps/_trumps.site-header.scss
@@ -19,8 +19,8 @@ $logo-tablet-height: 5.7rem;
     border-bottom: 6px solid $green-light-victoria;
 
     @include breakpoint ($tablet-and-bigger) {
-        padding-top: .5em;
-        padding-bottom: .5em;
+        padding-top: 1em;
+        padding-bottom: 1em;
     }
 
     a { color: $white; }
@@ -37,8 +37,7 @@ $logo-tablet-height: 5.7rem;
 
         @include breakpoint( $tablet-and-bigger ) {
             float: left;
-            padding: 0 2em 0 .5em;
-            margin: 1.35em 0 .75em;
+            padding: .25em 2em 0 .5em;
             @include size( 27% auto );
             text-align: center;
         }
@@ -51,8 +50,8 @@ $logo-tablet-height: 5.7rem;
         }
 
         @include breakpoint( $desktop ) {
-            margin-top: 1.5em;
             padding-right: 1.7em;
+            margin-bottom: .25em;
             width: 23%;
         }
 
@@ -172,6 +171,7 @@ $logo-tablet-height: 5.7rem;
                 clear: both;
                 display: block;
                 width: 100%;
+                padding: 1em 0;
                 max-height: 160px;
                 transition: all .2s ease;
                 opacity: 1;
@@ -185,13 +185,11 @@ $logo-tablet-height: 5.7rem;
             }
 
             .search-form {
-                margin-top: 1em;
                 background-color: $grey-alto;
                 padding: .75em;
                 border-radius: $base-border-radius;
                 @include breakpoint ($tablet-and-bigger) {
                     margin-top: 0;
-                    margin-bottom: 1em;
                     margin-right: auto;
                     margin-left: auto;
                     width: 70%;
@@ -234,13 +232,17 @@ $logo-tablet-height: 5.7rem;
 
     .secondary-nav {
         display: none;
-        @include breakpoint ($tablet-and-bigger) {
+
+        @include breakpoint ( $tablet-and-bigger ) {
             margin-bottom: .2em;
+            padding-top: .15em;
+
             display: block !important;
+
             ul {
                 overflow: hidden;
                 clear: right;
-                padding-top: .85em;
+                line-height: 1;
 
                 li {
                     float: left;
