--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -364,7 +364,7 @@ $contact-portrait-size: 150px;
     display: inline-block;
     vertical-align: top;
     width: 49%;
-    margin: .45em 0;
+    margin: 0 0 .5em 0;
 
     // 2 columns-layout -> Make all even cards margined from the odd cards
     &:nth-child(even) { margin-left: 2%; }
