--- a/6-components/_components.image-blocks.scss
+++ b/6-components/_components.image-blocks.scss
@@ -37,7 +37,7 @@ $action-promo-hover: darken( $green-light-victoria, 11% );
             color: $white;
         }
 
-        header { padding: $base-margin; }
+        header { padding: $base-margin * 1.5 $base-margin; }
 
         .promo-action {
             width: 100%;
