--- a/6-components/_components.layout.scss
+++ b/6-components/_components.layout.scss
@@ -38,10 +38,10 @@
     }
 
     li {
-        border-left: 1px solid $block-highlight-border;
+        //border-left: 1px solid $block-highlight-border;
 
         &:last-child {
-            border-right: 1px solid $block-highlight-border;
+            //border-right: 1px solid $block-highlight-border;
         }
     }
 }
