--- a/6-components/_components.tooltips.scss
+++ b/6-components/_components.tooltips.scss
@@ -7,7 +7,7 @@ $tooltip-caret-size:    20px;
 
 #tooltip {
     position: absolute;
-    font-size: .9rem;
+    font-size: .9em;
     z-index: $z-index-middle;
     padding: $base-margin / 2;
     max-width: $base-width * .45;
@@ -23,11 +23,10 @@ $tooltip-caret-size:    20px;
     /* Tooltip's `tip` */
 
     // Bottom position (default)
-    &:after {
+    @include after( $position: absolute ) {
+        left: 50%;
         @include size ( 0 );
-        @include position( absolute, null null null 50% );
         margin-left: -10px;
-        content: '';
     }
 
     // Positions
