[ADD] New version of the top header strip.

--- a/1-settings/_settings.global.scss
+++ b/1-settings/_settings.global.scss
@@ -95,6 +95,7 @@ $caption-colour:        $grey-mako;
 $caption-line-height:   1.25;
 
 $link-colour:           $blue-endeavoura;
+$link-hover-colour:     $blue-curious;
 
 $text-fade-colour:      $blue-grey-tower; // What is this used for?
 
