--- a/7-trumps/_trumps.site-header.scss
+++ b/7-trumps/_trumps.site-header.scss
@@ -3,7 +3,7 @@
 =============================================*/
 
 
-/** TODO: Discontinue (deprecate) or refactor completely. */
+/** TODO: Discontinue (deprecate) or refactor completely by moving into _components.navigation.scss  */
 
 
 $logo-mobile-width: 12rem;
